# PartPilot

./: .env.example  .gitignore  .~lock.slice-vb.csv#  CLAUDE.md  README.md  pyproject.toml  requirements.txt  restart  run-test  slice-vb.csv
config/: column_mappings.yaml  device_lookup.yaml  settings.example.yaml
deploy/: partpilot.service
docs/: design-rules.md  partpilot-integration.md
src/digisearch/: __init__.py  cart.py  cli.py  config.py  models.py  pipeline.py  purchasing.py  stock.py
src/digisearch/bom/: normalize.py  readers.py
src/digisearch/devmgmt/: __init__.py  auth.py  client.py  config.py
src/digisearch/digikey/: auth.py  cache.py  client.py
src/digisearch/fortnox/: __init__.py  client.py
src/digisearch/match/: score.py
src/digisearch/minimrp/: reader.py
src/digisearch/web/: app.py  (+3 more)
tests/: conftest.py  test_article_register.py  test_assemblies.py  test_assemblies_devmgmt.py  test_auth.py  test_background_tasks.py  test_cart.py  test_catalog.py  test_classify_spec.py  test_config.py  test_contacts.py  test_customer_orders.py  test_db.py  test_despatch.py  test_devmgmt_client.py  test_devmgmt_model.py  test_devmgmt_outbox.py  test_documents.py  test_documents_web.py  test_eseries.py  test_fortnox.py  test_fortnox_invoice.py  test_ilabs_value.py  test_lookup_crystal.py  test_mouser.py  test_pipeline_report.py  test_planning.py  test_purchase_orders.py  test_purchasing.py  test_stock.py  test_units_refdes.py  test_users.py  test_web.py  test_webshop_scheduler.py  test_woo_sync.py  test_woocommerce.py  test_work_orders.py  test_workdays.py
(+177 files in other folders)
