[project]
name = "digisearch"
version = "0.1.0"
description = "Resolve simplified BOMs to real Digi-Key parts with refdes, pricing and stock."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "rapidfuzz>=3.9",
    "typer>=0.12",
]

[project.scripts]
digisearch = "digisearch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digisearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
